# computer_graphics_2021

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists_BACKUP_10988.txt  CMakeLists_BASE_10988.txt  CMakeLists_REMOTE_10988.txt  README.md
include/: ConcaveCollider.h  EventListener.h  common.cpp  common.h  stb_image.h
include/learnopengl/: camera.h  filesystem.h  mesh.h  model.cpp  model.h  shader.h  shader_m.h  shader_s.h
include/rg/: Camera.h  Error.h  Shader.h  Texture2D.h  mesh.h  model.h
libs/reactphysics3d/: CMakeLists.txt
libs/reactphysics3d/src/systems/: CollisionDetectionSystem.cpp
resources/objects/arena/: arena.mtl
resources/objects/arsenal/frost_bomb/: frost_bomb.mtl
resources/objects/arsenal/lightning/: lightning.mtl
resources/objects/arsenal/spectral_arrow/: spectral_arrow.mtl
resources/objects/arsenal/void_bolt/: void_bolt.mtl
resources/shaders/: basic.fs  basic.vs  player.fs  player.vs  skybox.fs  skybox.vs
src/: constants.h  main.cpp
src/Controller/: LevelController.cpp  LevelController.h  PhysicsController.cpp  PhysicsController.h  PlayerController.cpp  PlayerController.h  RenderController.cpp  RenderController.h  SpellFactory.cpp  SpellFactory.h
src/Entity/: Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  ModelManager.h  ShaderManager.h
src/opengl/: PlayerModel.cpp  PlayerModel.h  Skybox.cpp  Skybox.h
tests/: CMakeLists.txt  EntityManagerTest.cpp  EntityTest.cpp
